Added PROPERTIES file format parsing, and it's testing.